Changes since CEXP-2.3.1
Changes since CEXP-2.3.0
  20180320:
 - cexplock.c: rhel6 needs #define _XOPEN_SOURCE 500
 - Makefile.am: improve out-of-sourcetree builds
Changes since CEXP-2.2
  20180319:
 -  Compile __gnu_Unwind_Find_exidx() only if USE_LOADER (and arm)
  20171021:
 -  port to rtems-4.12 (recent libbsd)
 -  cexpmod.c: made __gnu_Unwind_Find_exidx a weak alias
    
    There could be multiple versions and an application
    can provide a global routine that iterates over multiple
    library-provided versions.

 -  bfdstuff.c: must look up symbol even if not undefined in order to locate veneer info
 -  updated libtecla (recent autotools)

 -  pmbfd FIXED wrong offset calculation (veneer in arm mode)
  20171017:
 -  Use rtems cache flushing from rtems/rtems/cache.h when available
  20171016:
 -  Reworked veneer support.
    
    Veneers themselves are now generated by pmbfd.
    
    Every loaded object (+ system table) calls cexpSymTblFixup()
    which in-turn calls pmbfd_make_veneers() to create veneers
    and attach them to the symbol's 'xtra' field.
    
    When such a symbol is referred by a relocation then the
    extra info is passed to pmbfd_perform_reloc() where it
    can be used to locate a proper veneer.

 -  elfsyms.c: never uses loader; removed cexpSymFixup
    
    -> because new implementation uses pmbfd

 -  FIX - cexpsegs.c: fixed missing return value upon success (cexpSegsAllocOne())
 -  FIX - cexpsegs-alloc.c: fixed incorrect number of segments
 -  cexpmod.c: code which refers to segments if USE_LOADER is configured only
 -  Renamed cexpFixupSymTbl->cexpSymTblFixup (for consistency)
 -  Changed 'help' field in symbol struct to a more generic pointer.
    
    Where desired we can attach 'extra' struct where we can hold veneer
    info; help is then reached via double indirection.

 -  CHANGE: respect GLOBAL symbol flag; only relocate against global symbols
 -   moved cexpSegsGet() to cexpsegs.c